# mamute-maa

./: .gitignore  README.md  eslint.config.mjs  package-lock.json  package.json  prettier.config.cjs  tsconfig.base.json
apps/admin-desktop/: eslint.config.mjs  index.html  package.json  vite.config.ts
apps/admin-desktop/src/: App.tsx  main.tsx  styles.css
apps/admin-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/admin-desktop/src-tauri/icons/: icon.icns
apps/admin-desktop/src-tauri/src/: main.rs
apps/instructor-app/: .gitignore  app.json  package.json  tsconfig.json
apps/instructor-app/app/: +html.tsx  +not-found.tsx  _layout.tsx  index.tsx
apps/instructor-app/components/: HeroHeader.tsx  useRealtimeRefresh.ts
apps/instructor-app/lib/: auth.tsx
apps/student-app/: .gitignore  app.config.ts  app.json  eas.json  metro.config.js  package.json
apps/student-app/app/: _layout.tsx  reset-password.tsx
apps/student-app/components/: HeroHeader.tsx  useRealtimeRefresh.ts
apps/student-app/lib/: pushDebug.ts
apps/web-dashboard/: next.config.ts  package.json  tsconfig.json
apps/web-dashboard/app/: globals.css  layout.tsx  page.tsx
supabase/: schema.sql
supabase/functions/createAdminUser/: index.ts
supabase/functions/linkStudentAccess/: index.ts
supabase/functions/makeMeAdmin/: index.ts
supabase/functions/recordAttendance/: index.ts
supabase/functions/registerMobileUser/: index.ts
supabase/functions/sendNotification/: index.ts
supabase/functions/syncPaymentStatus/: index.ts
supabase/functions/verifyGuardianLink/: index.ts
(+24 files in other folders)
