[package]
name = "mamute"
version = "0.1.0"
description = "Mamute MAA Admin Desktop"
authors = ["Mamute"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-deep-link = "2.4.7"

[features]
custom-protocol = ["tauri/custom-protocol"]
